private/src/styles/layout/footer/_main.scss
.footer {
  width: 100%;
  background-color: var(--wp--preset--color--black);

  & > .over-footer {
    width: 100vw;
    background-color: var(--wp--preset--color--primary);

    & > .over-footer-container {
      padding: 36px 0;
      max-width: $container-lg;
      margin: 0 auto;
      display: flex;

      @media (max-width: $container-sm) {
        flex-direction: column;
      }

      @media (max-width: $container-lg) {
        padding: 36px 24px;
      }

      & > .over-footer-action,
      .over-footer-social {
        display: flex;
      }

      & > .over-footer-social {
        flex-direction: column;
        width: 55%;

        @media (max-width: $container-sm) {
          width: 100%;
        }

        & > .nl-container {
          & > form {
            display: flex;
            width: 75%;
            height: 50px;

            input {
              border: none;

              &::placeholder {
                color: var(--wp--preset--color--grey);
                text-transform: none;
              }
            }

            > .register-nl {
              flex: 1;
              display: flex;
              align-items: center;
              column-gap: 13.5px;
              width: fit-content;
              padding: 2px 20px;
              transition: all 0.2s ease-in;
              background-color: var(--wp--preset--color--black);
              color: var(--wp--preset--color--white);
              text-decoration: none;
              text-transform: uppercase;
              position: relative;
              cursor: pointer;
              font-family: var(--wp--preset--font-family--secondary);
              font-weight: bold;
              font-size: 14px;

              & > svg > path {
                fill: var(--wp--preset--color--primary);
              }

              @media (max-width: $container-md) {
                width: 100%;
              }

              &:disabled {
                cursor: not-allowed;
                opacity: 0.6;
                filter: grayscale(30%);
              }

              .spinner {
                border: 4px solid rgba(255, 255, 255, 0.3);
                border-top: 4px solid #fff;
                border-radius: 50%;
                width: 16px;
                height: 16px;
                animation: spin 1s linear infinite;
                display: inline-block;
                vertical-align: middle;
              }

              @keyframes spin {
                0% {
                  transform: rotate(0deg);
                }

                100% {
                  transform: rotate(360deg);
                }
              }

              .hidden {
                display: none !important;
              }
            }

            @media (max-width: $container-md) {
              width: 100%;
            }
          }
        }

        & > .title {
          font-family: var(--wp--preset--font-family--secondary), sans-serif;
          font-weight: bold;
          font-size: 36px;
          line-height: 41px;
          letter-spacing: 0;
          margin-bottom: 1rem;
        }

        & > .subtitle {
          font-family: var(--wp--preset--font-family--primary), sans-serif;
          font-size: 18px;
          line-height: 28px;
          letter-spacing: 0;
          margin-bottom: 1rem;
        }

        .social-network-list {
          display: flex;
          flex-wrap: wrap;
          gap: 12px;
          margin-top: 58px;
          width: fit-content;

          .social-network-item {
            width: 46px;
            height: 46px;

            &-svg {
              display: flex;
              justify-content: center;
              align-items: center;
              width: 100%;
              height: 100%;
              border-radius: 50%;
              transition: background-color 0.2s ease-in-out;

              svg {
                width: 34px;
                height: 34px;
                transition: fill 0.2s ease-in-out;
              }

              &:hover {
                background-color: var(--wp--preset--color--primary-dark);
              }
            }
          }
        }
      }

      & > .over-footer-action {
        margin: auto;
        width: 45%;

        @media (max-width: $container-sm) {
          width: 100%;
        }

        & > .call-to-action {
          display: grid;
          grid-template-columns: repeat(2, 1fr);
          gap: 1rem;
          width: 100%;

          @media (max-width: $container-lg) {
            grid-template-columns: repeat(1, 1fr);
          }

          & > a {
            border: 4px solid var(--wp--preset--color--black);
            text-decoration: none;
            display: flex;
            align-items: center;
            height: 62px;
            background-color: var(--wp--preset--color--black);
            color: var(--wp--preset--color--white);
            gap: 12px;
            padding: 4px 12px;
            font-family: var(--wp--preset--font-family--secondary);
            transition: all 0.2s ease-in;
            font-weight: bold;
            font-size: 24px;
            line-height: 100%;
            letter-spacing: 0;

            &:hover {
              background-color: var(--wp--preset--color--primary);
              color: var(--wp--preset--color--black);

              & > svg > path {
                fill: var(--wp--preset--color--black);
              }
            }

            @media (max-width: $container-sm) {
              justify-content: center;
              width: 100%;
            }
          }
        }

        @media (max-width: $container-lg) {
          margin-top: 31px;
        }
      }
    }
  }

  .main-footer {
    max-width: $container-lg;
    margin: 0 auto;
    display: grid;
    grid-template-columns: 1fr;
    gap: 36px;
    padding: 54px 24px 36px 24px;

    @media (min-width: $container-sm) {
      grid-template-columns: repeat(2, 1fr);
    }

    @media (min-width: $container-lg) {
      grid-template-columns: repeat(5, 1fr);
      padding: 54px 0 36px 0;
      gap: 18px;
    }

    .main-footer-item {
      .title {
        position: relative;
        font-family: var(--wp--preset--font-family--secondary), sans-serif;
        font-size: 20px;
        font-weight: bold;
        line-height: 24px;
        color: var(--wp--preset--color--white);
        padding-bottom: 14px;
        text-align: center;

        @media (min-width: $container-lg) {
          text-align: left;
        }

        &::after {
          content: '';
          display: block;
          width: 33px;
          height: 4px;
          background-color: var(--wp--preset--color--primary);
          position: absolute;
          bottom: 0;
          left: 50%;
          transform: translateX(-50%);

          @media (min-width: $container-lg) {
            left: 0;
            transform: none;
          }
        }
      }

      .list-children {
        display: flex;
        flex-direction: column;
        gap: 18px;
        list-style: none;
        margin: 0;

        .child {
          text-align: center;

          @media (min-width: $container-lg) {
            text-align: left;
          }

          a {
            color: var(--wp--preset--color--white);
            font-size: 16px;
            font-weight: 300;
            line-height: 14px;
            text-decoration: none;

            &:hover {
              color: var(--wp--preset--color--primary);
              background-color: transparent;
            }
          }
        }
      }
    }
  }

  .privacy-footer {
    max-width: $container-lg;
    padding: 38px 0;
    border-top: 1px solid var(--wp--preset--color--primary);

    .list-children {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      list-style: none;
      margin: 0;
      flex-wrap: wrap;

      @media (min-width: $container-lg) {
        flex-direction: row;
      }

      .child {
        width: fit-content;

        &:not(:last-child)::after {
          display: none;

          @media (min-width: $container-lg) {
            display: inline-block;
            content: '|';
            color: var(--wp--preset--color--white);
            padding: 0 14px;
            font-weight: bold;
          }
        }

        a {
          color: var(--wp--preset--color--white);
          text-align: center;
          font-size: 16px;
          font-weight: bold;
          line-height: 28px;
          text-decoration: none;

          &:hover {
            color: var(--wp--preset--color--primary);
            background-color: transparent;
          }
        }
      }
    }
  }

  .popup {
    display: none;
    position: fixed;
    z-index: 9999;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.6);
    justify-content: center;
    align-items: center;

    &.popup-visible {
      display: flex;
    }

    .popup-content {
      background-color: #fff;
      padding: 30px;
      width: 90%;
      max-width: 450px;
      text-align: center;
      position: relative;
      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
    }

    @keyframes scaleIn {
      to {
        transform: scale(1);
        opacity: 1;
      }
    }

    .close-btn {
      color: #aaa;
      font-size: 30px;
      font-weight: bold;
      position: absolute;
      top: 10px;
      right: 15px;
      cursor: pointer;
      text-decoration: none;
      background-color: transparent;
    }

    .close-btn:hover {
      color: #333;
    }
  }
}

